Start with header

--- a/front/src/styles/_variables.scss
+++ b/front/src/styles/_variables.scss
@@ -6,18 +6,18 @@ $fontSize: 16;
 //</ШРИФТЫ>=======================================================================================================
 
 //<ПЕРЕМЕННЫЕ>===========================================================================================================
-$minWidth: 320px;
+$minWidth: 320;
 $maxWidth: 1880;
-$maxWidthContainer: 1280;
+$maxWidthContainer: 1136;
 $md1: $maxWidthContainer + 12;
 $md2: 767.98;
 $md3: 479.98;
 //$md4: 479.98;
 
-$mainColor: #fff;
-$menuColor: #07095E;
+$mainColor: #423E48;
+$secondColor: #4275D8;
 $menuColorActive: #4244E7;
-$btnColor: #4244E7;
+$btnColor: #4275D8;
 $btnColorHover: #6F70FD;
 $btnColorActive: #3638C9;
 $BGColor:#07095E;
