Change style for header

--- a/front/src/styles/_variables.scss
+++ b/front/src/styles/_variables.scss
@@ -1,5 +1,5 @@
 //<Шрифт по умолчанию>==========================================================================================
-$fontFamily: "Montserrat";
+$fontFamily: "Rubik";
 $fontSize: 16;
 //</Шрифт по умолчанию>==========================================================================================
 
