--- a/front/src/assets/icons/iconsfont.css
+++ b/front/src/assets/icons/iconsfont.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?4vw17d');
-  src:  url('fonts/icomoon.eot?4vw17d#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?4vw17d') format('truetype'),
-    url('fonts/icomoon.woff?4vw17d') format('woff'),
-    url('fonts/icomoon.svg?4vw17d#icomoon') format('svg');
+  src:  url('../src/assets/icons/fonts/icomoon.eot?4vw17d');
+  src:  url('../src/assets/icons/fonts/icomoon.eot?4vw17d#iefix') format('embedded-opentype'),
+    url('../src/assets/icons/fonts/icomoon.ttf?4vw17d') format('truetype'),
+    url('../src/assets/icons/fonts/icomoon.woff?4vw17d') format('woff'),
+    url('../src/assets/icons/fonts/icomoon.svg?4vw17d#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
