--- a/front/src/styles/iconsfont.css
+++ b/front/src/styles/iconsfont.css
@@ -1,16 +1,15 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?4vw17d');
-  src:  url('fonts/icomoon.eot?4vw17d#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?4vw17d') format('truetype'),
-    url('fonts/icomoon.woff?4vw17d') format('woff'),
-    url('fonts/icomoon.svg?4vw17d#icomoon') format('svg');
+  src: url('../src/assets/icons/fonts/icomoon.ttf?4vw17d') format('truetype'),
+    url('../src/assets/icons/fonts/icomoon.woff?4vw17d') format('woff'),
+    url('../src/assets/icons/fonts/icomoon.svg?4vw17d#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
 }
 
-[class^="icon-"], [class*=" icon-"] {
+[class^="icon-"]::before,
+[class*=" icon-"]::before {
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'icomoon' !important;
   speak: never;
