made product card with grid

--- a/front/src/styles/iconsfont.css
+++ b/front/src/styles/iconsfont.css
@@ -9,7 +9,9 @@
 }
 
 [class^="icon-"]::before,
-[class*=" icon-"]::before {
+[class*=" icon-"]::before,
+[class^="icon-"]::after,
+[class*=" icon-"]::after{
   /* use !important to prevent issues with browser extensions that change fonts */
   font-family: 'icomoon' !important;
   speak: never;
