--- a/front/src/styles/_mixins.scss
+++ b/front/src/styles/_mixins.scss
@@ -16,17 +16,17 @@
         //Только если меньше контейнера
         font-size: $pcSize + px;
         @media (max-width: #{$maxWidthContainer + px}) {
-            font-size: calc(#{$mobSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidthContainer - 320}));
+            font-size: calc(#{$mobSize} + #{$addSize} * ((100vw - 320px) / #{$maxWidthContainer - 320}));
         }
     } @else if $maxSize==2 {
         //Только если больше контейнера
         font-size: $pcSize + px;
         @media (min-width: #{$maxWidthContainer + px}) {
-            font-size: calc(#{$mobSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth - 320}));
+            font-size: calc(#{$mobSize} + #{$addSize} * ((100vw - 320px) / #{$maxWidth - 320}));
         }
     } @else {
         //Всегда
-        font-size: calc(#{$mobSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth - 320}));
+        font-size: calc(#{$mobSize} + #{$addSize} * ((100vw - 320px) / #{$maxWidth - 320}));
     }
 }
 
@@ -37,16 +37,16 @@
         //Только если меньше контейнера
         #{$property}: $startSize + px;
         @media (max-width: #{$maxWidthContainer + px}) {
-            #{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidthContainer - 320}));
+            #{$property}: calc(#{$minSize} + #{$addSize} * ((100vw - 320px) / #{$maxWidthContainer - 320}));
         }
     } @else if $type==2 {
         //Только если больше контейнера
         #{$property}: $startSize + px;
         @media (min-width: #{$maxWidthContainer + px}) {
-            #{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth - 320}));
+            #{$property}: calc(#{$minSize} + #{$addSize} * ((100vw - 320px) / #{$maxWidth - 320}));
         }
     } @else {
         //Всегда
-        #{$property}: calc(#{$minSize + px} + #{$addSize} * ((100vw - 320px) / #{$maxWidth - 320}));
+        #{$property}: calc(#{$minSize} + #{$addSize} * ((100vw - 320px) / #{$maxWidth - 320}));
     }
 }
