--- a/front/public/iconsfont.css
+++ b/front/public/iconsfont.css
@@ -146,6 +146,12 @@
 .icon-cart:before {
   content: "\e91c";
 }
+.icon-cart-chosen:before {
+  content: "\e91c";
+  background-color: #4275d8;
+  color: #FFFFFF;
+  border-radius: 5px;
+}
 .icon-trash:before {
   content: "\e91d";
 }
