--- a/front/public/iconsfont.css
+++ b/front/public/iconsfont.css
@@ -158,10 +158,23 @@
 .icon-user:before {
   content: "\e91e";
 }
-.icon-user-login:before {
-  content: "\e91e";
-  color: red;
-}
+
 .icon-favorite:before {
   content: "\e91f";
+}
+
+.icon-user-login:before {
+  content: "\e91e";
+  color: rgb(66, 62, 72);
+}
+.icon-user-login:after {
+  content: "\e926";
+  color: rgb(66, 117, 216);
+  font-size: 22px;
+  position: absolute;
+  bottom: 0;
+  right: -4px;
+}
+.icon-arrow-down:before {
+  content: "\e927";
 }
