--- a/backend/src/templates/registration.html
+++ b/backend/src/templates/registration.html
@@ -23,7 +23,8 @@
             <p style="font-size:18px; text-align: left;padding: 0  20px ">
                 Добрый день, <b>{{ name }}</b>!</p>
             <p style="font-size:18px; text-align: left;padding: 0  20px ">
-                Регистрация прошла успешно. Чтобы активировать аккаунт перейдите по ссылке {{ confirmation_url }}.
+                Регистрация прошла успешно. Чтобы активировать аккаунт перейдите по
+                <a href="{{ confirmation_url }}">ссылке</a>.
                 Желаем Вам приятных покупок.
             </p>
 
