Fix: static paths

--- a/backend/src/templates/create_order.htm
+++ b/backend/src/templates/create_order.htm
@@ -48,7 +48,12 @@
         <div style="padding: 15px 20px 40px 20px; position: relative;">
             <div style="padding: 0 25px ; width: auto; font-size: 18px; line-height: 24px; color: #000000; text-align: left; background: #F8FAFF;">
                 <div style="padding:15px 25px 0 40px; margin-bottom: 10px;">
-                    <div style="background: url('../order_number.svg') no-repeat left top; height: 50px; padding-left: 45px; margin-bottom: 20px;">
+                    <div style="
+                        background: url('{{ static_url }}/order_number.svg') no-repeat left top;
+                        height: 50px;
+                        padding-left: 45px;
+                        margin-bottom: 20px;"
+                    >
                         <span style="color: #000; font-size: 18px; line-height: 25px; font-weight: 700;  display: inline-block">Номер зазаза</span>
                         <br>
                         <span style="color:#4275D8; font-size: 18px; line-height: 25px;  display: inline-block;">{{ order_number }}</span>
@@ -56,21 +61,31 @@
                     </div>
                 </div>
                 <div style="padding:  0 25px 0 40px; margin-bottom: 10px;">
-                    <div style="background: url('../time.svg') no-repeat left top; height: 50px; padding-left: 45px;margin-bottom: 20px;">
+                    <div style="
+                        background: url('{{ static_url }}/time.svg') no-repeat left top;
+                        height: 50px;
+                        padding-left: 45px;
+                        margin-bottom: 20px;"
+                    >
                         <span style="color: #000; font-size: 18px; line-height: 25px; font-weight: 700;  display: inline-block">Дата доставки</span>
                         <br>
                         <span style="color:#4275D8; font-size: 18px; line-height: 25px;  display: inline-block;">23 ноября 2023</span>
                     </div>
                 </div>
                 <div style="padding:  0 25px 0 40px; margin-bottom: 10px;">
-                    <div style="background: url('../store.svg') no-repeat left top; height: 50px; padding-left: 45px;margin-bottom: 20px;">
+                    <div style="background: url('{{ static_url }}/store.svg') no-repeat left top; height: 50px; padding-left: 45px;margin-bottom: 20px;">
                         <span style="color: #000; font-size: 18px; line-height: 25px; font-weight: 700;  display: inline-block">Адрес пункта выдачи</span>
                         <br>
                         <span style="color:#4275D8; font-size: 18px; line-height: 25px; display: inline-block;">{{ pick_up_point }}</span>
                     </div>
                 </div>
                 <div style="padding:  0 25px 0 40px; margin-bottom: 10px;">
-                    <div style="background: url('../client.svg') no-repeat left top;height: 50px; padding-left: 45px;padding-bottom: 30px;">
+                    <div style="
+                        background: url('{{ static_url }}/client.svg') no-repeat left top;
+                        height: 50px;
+                        padding-left: 45px;
+                        padding-bottom: 30px;"
+                    >
                         <span style="color: #000; font-size: 18px; line-height: 25px; font-weight: 700;  display: inline-block">Получатель</span>
                         <br>
                         <span style="color:#4275D8; font-size: 18px; line-height: 25px; display: inline-block;">{{ name }}</span>
