--- a/backend/src/templates/registration.html
+++ b/backend/src/templates/registration.html
@@ -25,6 +25,10 @@
             <p style="font-size:18px; text-align: left;padding: 0  20px ">
                 Регистрация прошла успешно. Чтобы активировать аккаунт перейдите по
                 <a href="{{ confirmation_url }}">ссылке</a>.
+                {% if generated_password %}
+                    Сгенерированный паспорт {[ generated_password }}.
+                    Сгенерированный пароль может быть изменен в личном кабинете.
+                {% endif %}
                 Желаем Вам приятных покупок.
             </p>
 
