Fix: wrong bracket

--- a/backend/src/templates/registration.html
+++ b/backend/src/templates/registration.html
@@ -26,7 +26,7 @@
                 Регистрация прошла успешно. Чтобы активировать аккаунт перейдите по
                 <a href="{{ confirmation_url }}">ссылке</a>.
                 {% if generated_password %}
-                    Сгенерированный паспорт {[ generated_password }}.
+                    Сгенерированный паспорт {{ generated_password }}.
                     Сгенерированный пароль может быть изменен в личном кабинете.
                 {% endif %}
                 Желаем Вам приятных покупок.
