Fix: bug in a template

--- a/backend/src/templates/email/create_order.htm
+++ b/backend/src/templates/email/create_order.htm
@@ -72,11 +72,11 @@
                     <img src="{{ static_url }}/client.svg" alt="" style="vertical-align: middle; padding-top: 5px">
                 </div>
                 <div style="display: table-cell; text-align: left; ">
-                    <span style="color: #000; font-size: 18px; line-height: 25px; font-weight: 700;  display: inline-block">{{ name }}</span>
+                    <span style="color: #000; font-size: 18px; line-height: 25px; font-weight: 700;  display: inline-block">Получатель</span>
+                    <br>
+                    <span style="color:#4275D8; font-size: 18px; line-height: 25px; display: inline-block;">{{ name }}</span>
                     <br>
                     <span style="color:#4275D8; font-size: 18px; line-height: 25px; display: inline-block;">{{ phone_number }}</span>
-                    <br>
-                    <span style="color:#4275D8; font-size: 18px; line-height: 25px; display: inline-block;">{{  }}</span>
                 </div>
             </div>
         </div>
