Rerlace svg with png

--- a/backend/src/templates/email/create_order.htm
+++ b/backend/src/templates/email/create_order.htm
@@ -31,7 +31,7 @@
         <div style="padding:15px 25px 0 40px; margin-bottom: 10px;">
             <div style="height: 50px; padding-left: 0;margin-bottom: 20px; display: table; width: 100%;">
                 <div style="display: table-cell; text-align: left; width: 45px">
-                    <img src="{{ static_url }}/order_number.svg" alt=""
+                    <img src="{{ static_url }}/order_number.png" alt=""
                          style="vertical-align: middle; padding-top: 5px">
                 </div>
                 <div style="display: table-cell; text-align: left; ">
@@ -44,7 +44,7 @@
         <div style="padding:  0 25px 0 40px; margin-bottom: 10px;">
             <div style="height: 50px; padding-left: 0;margin-bottom: 20px; display: table; width: 100%;">
                 <div style="display: table-cell; text-align: left; width: 45px">
-                    <img src="{{ static_url }}/delivery_time.svg" alt=""
+                    <img src="{{ static_url }}/delivery_time.png" alt=""
                          style="vertical-align: middle; padding-top: 5px">
                 </div>
                 <div style="display: table-cell; text-align: left; ">
@@ -57,7 +57,7 @@
         <div style="padding:  0 25px 0 40px; margin-bottom: 10px;">
             <div style="height: 50px; padding-left: 0;margin-bottom: 20px; display: table; width: 100%;">
                 <div style="display: table-cell; text-align: left; width: 45px">
-                    <img src="{{ static_url }}/warehouse.svg" alt="" style="vertical-align: middle; padding-top: 5px">
+                    <img src="{{ static_url }}/warehouse.png" alt="" style="vertical-align: middle; padding-top: 5px">
                 </div>
                 <div style="display: table-cell; text-align: left; ">
                     <span style="color: #000; font-size: 18px; line-height: 25px; font-weight: 700;  display: inline-block">Адрес пункта выдачи</span>
@@ -69,7 +69,7 @@
         <div style="padding:  0 25px 0 40px; margin-bottom: 10px;">
             <div style="height: 50px; padding-left: 0;margin-bottom: 20px; display: table; width: 100%;">
                 <div style="display: table-cell; text-align: left; width: 45px">
-                    <img src="{{ static_url }}/client.svg" alt="" style="vertical-align: middle; padding-top: 5px">
+                    <img src="{{ static_url }}/client.png" alt="" style="vertical-align: middle; padding-top: 5px">
                 </div>
                 <div style="display: table-cell; text-align: left; ">
                     <span style="color: #000; font-size: 18px; line-height: 25px; font-weight: 700;  display: inline-block">Получатель</span>
