Fix: name in registration template with generating password

--- a/backend/src/templates/email/registration_with_generated_password.html
+++ b/backend/src/templates/email/registration_with_generated_password.html
@@ -8,7 +8,7 @@
     <p style="font-size:30px; text-align: left; font-weight:bold;padding: 0  20px;">
         Добро пожаловать на CabelTorg!</p>
     <p style="font-size:18px; text-align: left;padding: 0  20px ">
-        Добрый день, <b>Ирина</b>!</p>
+        Добрый день, <b>{{ name }}</b>!</p>
     <p style="font-size:18px; text-align: left;padding: 0  20px ">
         Регистрация прошла успешно. Желаем Вам приятных покупок.</p>
     <div style="font-size:18px; margin: 40px 0">
