Change link style

--- a/backend/src/templates/invoice.html
+++ b/backend/src/templates/invoice.html
@@ -96,7 +96,8 @@
                 <span>расшифровка подписи</span>
             </div>
         </div>
-        <hr class="hr__dot">
+        <hr style="page-break-before: always;" class="hr__dot">
+        <p style="page-break-before: always;"></p>
         <div class="invoice__header">
             <div class="invoice__number text-center">
                 <span>Протокол №</span>
