Change: invoice template

--- a/backend/src/templates/invoice.html
+++ b/backend/src/templates/invoice.html
@@ -88,6 +88,7 @@
             <div class="footer__sign__clm">
           <span>
             <img class="invoice__signature" src="{{static_url}}/signature.png" alt="">
+            <img class="invoice__stamp" src="{{static_url}}/stamp.png" alt="">
           </span>
                 <span>подпись</span>
             </div>
@@ -97,7 +98,6 @@
             </div>
         </div>
         <hr style="page-break-before: always;" class="hr__dot">
-        <p style="page-break-before: always;"></p>
         <div class="invoice__header">
             <div class="invoice__number text-center">
                 <span>Протокол №</span>
