--- a/backend/src/templates/email/change_order_status.htm
+++ b/backend/src/templates/email/change_order_status.htm
@@ -11,7 +11,7 @@
         Уведомляем Вас, что статус вашего заказа изменен! </p>
     <div style="background-color: #fff; position: relative; padding: 10px 0 40px 20px">
         <div style="border-radius: 6px; width: 220px; padding-top: 15px; height: 37px; background: #4275D8; border: 1px solid #F4F5F6; opacity: 1; text-align: center;margin:0 auto">
-            <a href="cabeltorg.by"
+            <a href="cabel-torg.by"
                style="color: #fff; font-size: 18px; text-decoration: none; vertical-align: top;">Перейти на
                 сайт</a>
         </div>
