--- a/backend/src/templates/email/reset_password.html
+++ b/backend/src/templates/email/reset_password.html
@@ -24,7 +24,7 @@
     <div style="background-color: #fff; position: relative; padding: 10px 0 40px 20px">
         <div style="border-radius: 5px; width: 220px; padding-top: 15px; height: 37px; background: #4275D8; border: 1px solid #F4F5F6; opacity: 1; text-align: center;margin:0 auto">
             <!--  # тут нужно ссылку на текущий  адресс сайта вставить         -->
-            <a href="cabeltorg.by"
+            <a href="cabel-torg.by"
                style="color: #fff; font-size: 18px; text-decoration: none; vertical-align: top;">Перейти на сайт</a>
         </div>
 
